@@ -5,8 +5,6 @@ import uk.gov.hmcts.et.common.model.bulk.types.DynamicFixedListType;
 import uk.gov.hmcts.et.common.model.bulk.types.DynamicValueType;
 import uk.gov.hmcts.et.common.model.ccd.CaseData;
 
-import java.util.stream.Collectors;
-
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.CLOSED_STATE;
 
 public final class TseAdminHelper {
@@ -28,7 +26,6 @@ public final class TseAdminHelper {
             .filter(r -> r.getValue().getStatus() != null && !CLOSED_STATE.equals(r.getValue().getStatus()))
             .map(r -> DynamicValueType.create(r.getValue().getNumber(),
                 r.getValue().getNumber() + " - " + r.getValue().getType())
-            )
-            .collect(Collectors.toList()));
+            ).toList());
     }
 }
