@@ -243,7 +243,7 @@ public class EventValidationService {
             var respRepNames = caseData.getRespondentCollection()
                 .stream()
                 .map(e -> e.getValue().getRespondentName())
-                .collect(Collectors.toList());
+                .toList();
 
             if (!respRepNames.isEmpty()) {
                 isValidName = respRepNames.contains(tempCollCurrentName);
@@ -508,7 +508,7 @@ public class EventValidationService {
                 .stream()
                 .filter(element -> element.getValue() > 1)
                 .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
+                .toList();
         if (!duplicatedJurCodes.isEmpty()) {
             duplicatedJurCodesMap.put(key, duplicatedJurCodes);
         }
@@ -544,7 +544,7 @@ public class EventValidationService {
                 log.info("Check if jurCodes collection within judgement exist in jurCodesCollection");
                 jurCodesDoesNotExist.addAll(jurCodesCollectionWithinJudgement.stream()
                         .filter(element -> !jurCodesCollection.contains(element))
-                        .collect(Collectors.toList()));
+                        .toList());
 
                 log.info("Check if jurCodes collection has duplicates");
                 populateJurCodesDuplicatedWithinJudgement(jurCodesCollectionWithinJudgement,
