@@ -7,7 +7,6 @@ import uk.gov.hmcts.ethos.replacement.docmosis.domain.repository.RoomRepository;
 import uk.gov.hmcts.ethos.replacement.docmosis.service.referencedata.RoomService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -19,6 +18,6 @@ public class JpaRoomService implements RoomService {
     public List<DynamicValueType> getRooms(String venueCode) {
         return roomRepository.findByVenueCode(venueCode).stream()
                 .map(r -> DynamicValueType.create(r.getCode(), r.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
